@@ -10,10 +10,13 @@ import com.powsybl.commons.PowsyblException;
 import com.powsybl.contingency.Contingency;
 import com.powsybl.contingency.ContingencyElement;
 import com.powsybl.iidm.network.*;
+import com.powsybl.iidm.network.extensions.HvdcAngleDroopActivePowerControl;
 import com.powsybl.iidm.network.extensions.LoadDetail;
+import com.powsybl.iidm.network.util.HvdcUtils;
 import com.powsybl.openloadflow.graph.GraphConnectivity;
 import com.powsybl.openloadflow.network.*;
 import com.powsybl.openloadflow.util.PerUnit;
+import org.apache.commons.lang3.tuple.Pair;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -21,8 +24,8 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 /**
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
- * @author Gaël Macherel <gael.macherel@artelys.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
+ * @author Gaël Macherel {@literal <gael.macherel@artelys.com>}
  */
 public class PropagatedContingency {
 
@@ -36,17 +39,17 @@ public class PropagatedContingency {
 
     private final Set<Terminal> terminalsToDisconnect;
 
-    private final Set<String> branchIdsToOpen = new LinkedHashSet<>();
+    private final Set<String> busIdsToLose;
+
+    private final Map<String, DisabledBranchStatus> branchIdsToOpen = new LinkedHashMap<>();
 
     private final Set<String> hvdcIdsToOpen = new HashSet<>(); // for HVDC in AC emulation
 
     private final Set<String> generatorIdsToLose = new HashSet<>();
 
-    private final Map<String, PowerShift> busIdsToShift = new HashMap<>();
+    private final Map<String, PowerShift> loadIdsToLoose = new HashMap<>();
 
     private final Map<String, AdmittanceShift> shuntIdsToShift = new HashMap<>();
-
-    private final Set<String> originalPowerShiftIds = new LinkedHashSet<>();
 
     public Contingency getContingency() {
         return contingency;
@@ -56,7 +59,11 @@ public class PropagatedContingency {
         return index;
     }
 
-    public Set<String> getBranchIdsToOpen() {
+    public Set<String> getBusIdsToLose() {
+        return busIdsToLose;
+    }
+
+    public Map<String, DisabledBranchStatus> getBranchIdsToOpen() {
         return branchIdsToOpen;
     }
 
@@ -72,23 +79,21 @@ public class PropagatedContingency {
         return generatorIdsToLose;
     }
 
-    public Map<String, PowerShift> getBusIdsToShift() {
-        return busIdsToShift;
+    public Map<String, PowerShift> getLoadIdsToLoose() {
+        return loadIdsToLoose;
     }
 
     public Map<String, AdmittanceShift> getShuntIdsToShift() {
         return shuntIdsToShift;
     }
 
-    public Set<String> getOriginalPowerShiftIds() {
-        return originalPowerShiftIds;
-    }
-
-    public PropagatedContingency(Contingency contingency, int index, Set<Switch> switchesToOpen, Set<Terminal> terminalsToDisconnect) {
+    public PropagatedContingency(Contingency contingency, int index, Set<Switch> switchesToOpen, Set<Terminal> terminalsToDisconnect,
+                                 Set<String> busIdsToLose) {
         this.contingency = Objects.requireNonNull(contingency);
         this.index = index;
         this.switchesToOpen = Objects.requireNonNull(switchesToOpen);
         this.terminalsToDisconnect = Objects.requireNonNull(terminalsToDisconnect);
+        this.busIdsToLose = Objects.requireNonNull(busIdsToLose);
     }
 
     private static PowerShift getLoadPowerShift(Load load, boolean slackDistributionOnConformLoad) {
@@ -104,73 +109,137 @@ public class PropagatedContingency {
                               load.getQ0() / PerUnit.SB); // ensurePowerFactorConstant is not supported.
     }
 
-    public static List<PropagatedContingency> createList(Network network, List<Contingency> contingencies, Set<Switch> allSwitchesToOpen, Set<Switch> allSwitchesToClose,
-                                                         boolean contingencyPropagation, boolean shuntCompensatorVoltageControlOn, boolean slackDistributionOnConformLoad, boolean hvdcAcEmulation) {
+    public static List<PropagatedContingency> createList(Network network, List<Contingency> contingencies, LfTopoConfig topoConfig,
+                                                         PropagatedContingencyCreationParameters creationParameters) {
         List<PropagatedContingency> propagatedContingencies = new ArrayList<>();
         for (int index = 0; index < contingencies.size(); index++) {
             Contingency contingency = contingencies.get(index);
             PropagatedContingency propagatedContingency =
-                    PropagatedContingency.create(network, contingency, index, contingencyPropagation);
+                    PropagatedContingency.create(network, contingency, index, topoConfig, creationParameters);
             propagatedContingencies.add(propagatedContingency);
-            allSwitchesToOpen.addAll(propagatedContingency.switchesToOpen);
-        }
-        boolean breakers = !(allSwitchesToOpen.isEmpty() && allSwitchesToClose.isEmpty());
-        for (PropagatedContingency propagatedContingency : propagatedContingencies) {
-            propagatedContingency.complete(shuntCompensatorVoltageControlOn, slackDistributionOnConformLoad, hvdcAcEmulation, breakers);
+            topoConfig.getSwitchesToOpen().addAll(propagatedContingency.switchesToOpen);
+            topoConfig.getBusIdsToLose().addAll(propagatedContingency.busIdsToLose);
         }
         return propagatedContingencies;
     }
 
-    private static PropagatedContingency create(Network network, Contingency contingency, int index, boolean contingencyPropagation) {
+    private static PropagatedContingency create(Network network, Contingency contingency, int index, LfTopoConfig topoConfig,
+                                                PropagatedContingencyCreationParameters creationParameters) {
         Set<Switch> switchesToOpen = new HashSet<>();
         Set<Terminal> terminalsToDisconnect = new HashSet<>();
+        Set<String> busIdsToLose = new HashSet<>();
         // process elements of the contingency
         for (ContingencyElement element : contingency.getElements()) {
             Identifiable<?> identifiable = getIdentifiable(network, element);
-            if (contingencyPropagation) {
-                ContingencyTripping.createContingencyTripping(network, identifiable).traverse(switchesToOpen, terminalsToDisconnect);
-            } else if (identifiable instanceof BusbarSection) {
-                ContingencyTripping.createBusbarSectionMinimalTripping(network, (BusbarSection) identifiable).traverse(switchesToOpen, terminalsToDisconnect);
-            }
-            terminalsToDisconnect.addAll(getTerminals(identifiable));
-            if (identifiable instanceof Switch) {
-                switchesToOpen.add((Switch) identifiable);
+            switch (identifiable.getType()) {
+                case BUS:
+                    Bus bus = (Bus) identifiable;
+                    if (bus.getVoltageLevel().getTopologyKind() == TopologyKind.BUS_BREAKER) {
+                        busIdsToLose.add(identifiable.getId());
+                        bus.visitConnectedEquipments(new DefaultTopologyVisitor() {
+                            public void visitBranch(Branch<?> branch, TwoSides side) {
+                                if (side == TwoSides.ONE) {
+                                    topoConfig.getBranchIdsOpenableSide1().add(branch.getId());
+                                } else {
+                                    topoConfig.getBranchIdsOpenableSide2().add(branch.getId());
+                                }
+                            }
+
+                            @Override
+                            public void visitLine(Line line, TwoSides side) {
+                                visitBranch(line, side);
+                            }
+
+                            @Override
+                            public void visitTwoWindingsTransformer(TwoWindingsTransformer transformer, TwoSides side) {
+                                visitBranch(transformer, side);
+                            }
+
+                            @Override
+                            public void visitThreeWindingsTransformer(ThreeWindingsTransformer transformer, ThreeSides side) {
+                                topoConfig.getBranchIdsOpenableSide1().add(LfLegBranch.getId(transformer.getId(), side.getNum()));
+                            }
+                        });
+                    } else {
+                        throw new UnsupportedOperationException("Unsupported contingency element type " + element.getType() + ": voltage level should be in bus/breaker topology");
+                    }
+                    break;
+                case BUSBAR_SECTION:
+                    if (creationParameters.isContingencyPropagation()) {
+                        ContingencyTripping.createContingencyTripping(network, identifiable).traverse(switchesToOpen, terminalsToDisconnect);
+                    } else {
+                        ContingencyTripping.createBusbarSectionMinimalTripping(network, (BusbarSection) identifiable).traverse(switchesToOpen, terminalsToDisconnect);
+                    }
+                    terminalsToDisconnect.addAll(getTerminals(identifiable));
+                    break;
+                case SWITCH:
+                    switchesToOpen.add((Switch) identifiable);
+                    break;
+                default:
+                    if (creationParameters.isContingencyPropagation()) {
+                        ContingencyTripping.createContingencyTripping(network, identifiable).traverse(switchesToOpen, terminalsToDisconnect);
+                    }
+                    terminalsToDisconnect.addAll(getTerminals(identifiable));
             }
         }
-        return new PropagatedContingency(contingency, index, switchesToOpen, terminalsToDisconnect);
+        PropagatedContingency propagatedContingency = new PropagatedContingency(contingency, index, switchesToOpen, terminalsToDisconnect, busIdsToLose);
+        propagatedContingency.complete(topoConfig, creationParameters);
+        return propagatedContingency;
     }
 
-    private void complete(boolean shuntCompensatorVoltageControlOn, boolean slackDistributionOnConformLoad,
-                                 boolean hvdcAcEmulation, boolean breakers) {
+    private <K> void addBranchToOpen(K branchId, DisabledBranchStatus status, Map<K, DisabledBranchStatus> branchIdsToOpen) {
+        DisabledBranchStatus oldStatus = branchIdsToOpen.get(branchId);
+        if (oldStatus == null) {
+            branchIdsToOpen.put(branchId, status);
+        } else if (status == DisabledBranchStatus.BOTH_SIDES || status != oldStatus) {
+            branchIdsToOpen.put(branchId, DisabledBranchStatus.BOTH_SIDES);
+        }
+    }
+
+    private void complete(LfTopoConfig topoConfig, PropagatedContingencyCreationParameters creationParameters) {
         for (Switch sw : switchesToOpen) {
-            branchIdsToOpen.add(sw.getId());
+            addBranchToOpen(sw.getId(), DisabledBranchStatus.BOTH_SIDES, branchIdsToOpen); // we open both sides
         }
 
         // process terminals disconnected, in particular process injection power shift
         for (Terminal terminal : terminalsToDisconnect) {
             Connectable<?> connectable = terminal.getConnectable();
             switch (connectable.getType()) {
-                case LINE:
-                case TWO_WINDINGS_TRANSFORMER:
+                case LINE,
+                     TWO_WINDINGS_TRANSFORMER:
+                    Branch<?> branch = (Branch<?>) connectable;
+                    if (terminal == branch.getTerminal1()) {
+                        addBranchToOpen(connectable.getId(), DisabledBranchStatus.SIDE_1, branchIdsToOpen);
+                        topoConfig.getBranchIdsOpenableSide1().add(connectable.getId());
+                    } else {
+                        addBranchToOpen(connectable.getId(), DisabledBranchStatus.SIDE_2, branchIdsToOpen);
+                        topoConfig.getBranchIdsOpenableSide2().add(connectable.getId());
+                    }
+                    break;
                 case DANGLING_LINE:
-                    branchIdsToOpen.add(connectable.getId());
+                    DanglingLine dl = (DanglingLine) connectable;
+                    // as we terminal is only on network side, we open both sides in LF network
+                    if (dl.isPaired()) {
+                        addBranchToOpen(dl.getTieLine().orElseThrow().getId(), DisabledBranchStatus.BOTH_SIDES, branchIdsToOpen);
+                    } else {
+                        addBranchToOpen(dl.getId(), DisabledBranchStatus.BOTH_SIDES, branchIdsToOpen);
+                    }
                     break;
 
-                case GENERATOR:
-                case STATIC_VAR_COMPENSATOR:
-                case BATTERY:
+                case GENERATOR,
+                     STATIC_VAR_COMPENSATOR,
+                     BATTERY:
                     generatorIdsToLose.add(connectable.getId());
                     break;
 
                 case LOAD:
                     Load load = (Load) connectable;
-                    originalPowerShiftIds.add(load.getId());
-                    addPowerShift(load.getTerminal(), busIdsToShift, getLoadPowerShift(load, slackDistributionOnConformLoad), breakers);
+                    loadIdsToLoose.put(load.getId(), getLoadPowerShift(load, creationParameters.isSlackDistributionOnConformLoad()));
                     break;
 
                 case SHUNT_COMPENSATOR:
                     ShuntCompensator shunt = (ShuntCompensator) connectable;
-                    if (shuntCompensatorVoltageControlOn && shunt.isVoltageRegulatorOn()) {
+                    if (creationParameters.isShuntCompensatorVoltageControlOn() && shunt.isVoltageRegulatorOn()) {
                         throw new UnsupportedOperationException("Shunt compensator '" + shunt.getId() + "' with voltage control on: not supported yet");
                     }
                     double zb = PerUnit.zb(shunt.getTerminal().getVoltageLevel().getNominalV());
@@ -180,15 +249,20 @@ public class PropagatedContingency {
 
                 case HVDC_CONVERTER_STATION:
                     HvdcConverterStation<?> station = (HvdcConverterStation<?>) connectable;
+                    HvdcAngleDroopActivePowerControl control = station.getHvdcLine().getExtension(HvdcAngleDroopActivePowerControl.class);
+                    if (control != null && control.isEnabled() && creationParameters.isHvdcAcEmulation()) {
+                        hvdcIdsToOpen.add(station.getHvdcLine().getId());
+                    }
+                    // FIXME
+                    // the other converter station should be considered to if in the same synchronous component (hvdc setpoint mode).
                     if (connectable instanceof VscConverterStation) {
                         generatorIdsToLose.add(connectable.getId());
                         hvdcIdsToOpen.add(station.getHvdcLine().getId());
                     } else {
                         LccConverterStation lcc = (LccConverterStation) connectable;
-                        PowerShift lccPowerShift = new PowerShift(HvdcConverterStations.getConverterStationTargetP(lcc, breakers) / PerUnit.SB, 0,
-                                HvdcConverterStations.getLccConverterStationLoadTargetQ(lcc, breakers) / PerUnit.SB);
-                        originalPowerShiftIds.add(lcc.getId());
-                        addPowerShift(lcc.getTerminal(), busIdsToShift, lccPowerShift, breakers);
+                        PowerShift lccPowerShift = new PowerShift(HvdcUtils.getConverterStationTargetP(lcc) / PerUnit.SB, 0,
+                                HvdcUtils.getLccConverterStationLoadTargetQ(lcc) / PerUnit.SB);
+                        loadIdsToLoose.put(lcc.getId(), lccPowerShift);
                     }
                     break;
 
@@ -197,9 +271,15 @@ public class PropagatedContingency {
                     break;
 
                 case THREE_WINDINGS_TRANSFORMER:
-                    branchIdsToOpen.add(connectable.getId() + "_leg_1");
-                    branchIdsToOpen.add(connectable.getId() + "_leg_2");
-                    branchIdsToOpen.add(connectable.getId() + "_leg_3");
+                    // terminal in always by construction the side 1 of the LF branch
+                    ThreeWindingsTransformer twt = (ThreeWindingsTransformer) connectable;
+                    for (ThreeSides side : ThreeSides.values()) {
+                        if (twt.getTerminal(side) == terminal) {
+                            addBranchToOpen(LfLegBranch.getId(side, connectable.getId()), DisabledBranchStatus.SIDE_1, branchIdsToOpen);
+                            topoConfig.getBranchIdsOpenableSide1().add(LfLegBranch.getId(connectable.getId(), side.getNum()));
+                            break;
+                        }
+                    }
                     break;
 
                 default:
@@ -209,20 +289,15 @@ public class PropagatedContingency {
         }
     }
 
-    private static void addPowerShift(Terminal terminal, Map<String, PowerShift> busIdsToShift, PowerShift powerShift, boolean breakers) {
-        Bus bus = breakers ? terminal.getBusBreakerView().getBus() : terminal.getBusView().getBus();
-        if (bus != null) {
-            busIdsToShift.computeIfAbsent(bus.getId(), k -> new PowerShift()).add(powerShift);
-        }
-    }
-
     private static List<? extends Terminal> getTerminals(Identifiable<?> identifiable) {
         if (identifiable instanceof Connectable<?>) {
             return ((Connectable<?>) identifiable).getTerminals();
         }
-        if (identifiable instanceof HvdcLine) {
-            HvdcLine hvdcLine = (HvdcLine) identifiable;
-            return Arrays.asList(hvdcLine.getConverterStation1().getTerminal(), hvdcLine.getConverterStation2().getTerminal());
+        if (identifiable instanceof HvdcLine hvdcLine) {
+            return List.of(hvdcLine.getConverterStation1().getTerminal(), hvdcLine.getConverterStation2().getTerminal());
+        }
+        if (identifiable instanceof TieLine line) {
+            return List.of(line.getDanglingLine1().getTerminal(), line.getDanglingLine2().getTerminal());
         }
         if (identifiable instanceof Switch) {
             return Collections.emptyList();
@@ -234,9 +309,9 @@ public class PropagatedContingency {
         Identifiable<?> identifiable;
         String identifiableType;
         switch (element.getType()) {
-            case BRANCH:
-            case LINE:
-            case TWO_WINDINGS_TRANSFORMER:
+            case BRANCH,
+                 LINE,
+                 TWO_WINDINGS_TRANSFORMER:
                 identifiable = network.getBranch(element.getId());
                 identifiableType = "Branch";
                 break;
@@ -276,6 +351,14 @@ public class PropagatedContingency {
                 identifiable = network.getBusbarSection(element.getId());
                 identifiableType = "Busbar section";
                 break;
+            case TIE_LINE:
+                identifiable = network.getTieLine(element.getId());
+                identifiableType = "Tie line";
+                break;
+            case BUS:
+                identifiable = network.getBusBreakerView().getBus(element.getId());
+                identifiableType = "Configured bus";
+                break;
             default:
                 throw new UnsupportedOperationException("Unsupported contingency element type: " + element.getType());
         }
@@ -285,56 +368,113 @@ public class PropagatedContingency {
         return identifiable;
     }
 
-    public Optional<LfContingency> toLfContingency(LfNetwork network) {
+    public boolean hasNoImpact() {
+        return branchIdsToOpen.isEmpty()
+                && hvdcIdsToOpen.isEmpty() && generatorIdsToLose.isEmpty()
+                && loadIdsToLoose.isEmpty() && shuntIdsToShift.isEmpty() && busIdsToLose.isEmpty();
+    }
+
+    private Map<LfBranch, DisabledBranchStatus> findBranchToOpenDirectlyImpactedByContingency(LfNetwork network) {
+        // we add the branches connected to buses to lose.
+        Map<LfBranch, DisabledBranchStatus> branchesToOpen = branchIdsToOpen.entrySet().stream()
+                .map(e -> Pair.of(network.getBranchById(e.getKey()), e.getValue()))
+                .filter(e -> e.getKey() != null)
+                .collect(Collectors.toMap(Pair::getKey, Pair::getValue, (disabledBranchStatus, disabledBranchStatus2) -> {
+                    throw new IllegalStateException();
+                }, LinkedHashMap::new));
+
+        busIdsToLose.stream().map(network::getBusById)
+                .filter(Objects::nonNull)
+                .forEach(bus -> {
+                    if (bus.isSlack()) {
+                        // slack bus disabling is not supported
+                        // we keep the slack bus enabled and the connected lostBranches
+                        LOGGER.error("Contingency '{}' leads to the loss of a slack bus: slack bus kept", bus.getId());
+                    } else {
+                        bus.getBranches().forEach(branch -> {
+                            DisabledBranchStatus status = branch.getBus1() == bus ? DisabledBranchStatus.SIDE_1 : DisabledBranchStatus.SIDE_2;
+                            addBranchToOpen(branch, status, branchesToOpen);
+                        });
+                    }
+                });
+
+        return branchesToOpen;
+    }
+
+    record ContingencyConnectivityLossImpact(boolean ok, int createdSynchronousComponents, Set<LfBus> busesToLost) {
+    }
+
+    private ContingencyConnectivityLossImpact findBusesAndBranchesImpactedBecauseOfConnectivityLoss(LfNetwork network, Map<LfBranch, DisabledBranchStatus> branchesToOpen) {
         // update connectivity with triggered branches of this network
         GraphConnectivity<LfBus, LfBranch> connectivity = network.getConnectivity();
         connectivity.startTemporaryChanges();
+        try {
+            branchesToOpen.keySet().stream()
+                    .filter(LfBranch::isConnectedAtBothSides)
+                    .forEach(connectivity::removeEdge);
 
-        List<LfBranch> branchesToOpen = branchIdsToOpen.stream()
-                .map(network::getBranchById)
-                .filter(Objects::nonNull) // could be in another component
-                .collect(Collectors.toList());
+            if (connectivity.getConnectedComponent(network.getSlackBus()).size() == 1) {
+                // FIXME
+                // If a contingency leads to an isolated slack bus, this bus is considered as the main component.
+                // In that case, we have an issue with a different number of variables and equations.
+                LOGGER.error("Contingency '{}' leads to an isolated slack bus: not supported", contingency.getId());
+                return new ContingencyConnectivityLossImpact(false, 0, Collections.emptySet());
+            }
 
-        branchesToOpen.stream()
-                .filter(LfBranch::isConnectedAtBothSides)
-                .forEach(connectivity::removeEdge);
+            // add to contingency description buses and branches that won't be part of the main connected
+            // component in post contingency state
+            int createdSynchronousComponents = connectivity.getNbConnectedComponents() - 1;
+            Set<LfBus> busesToLost = connectivity.getVerticesRemovedFromMainComponent();
 
-        if (connectivity.getConnectedComponent(network.getSlackBus()).size() == 1) {
-            // FIXME
-            // If a contingency leads to an isolated slack bus, this bus is considered as the main component.
-            // In that case, we have an issue with a different number of variables and equations.
-            LOGGER.error("Contingency '{}' leads to an isolated slack bus: not supported", contingency.getId());
+            return new ContingencyConnectivityLossImpact(true, createdSynchronousComponents, busesToLost);
+        } finally {
+            // reset connectivity to discard triggered elements
             connectivity.undoTemporaryChanges();
+        }
+    }
+
+    private static boolean isConnectedAfterContingencySide1(Map<LfBranch, DisabledBranchStatus> branchesToOpen, LfBranch branch) {
+        DisabledBranchStatus status = branchesToOpen.get(branch);
+        return status == null || status == DisabledBranchStatus.SIDE_2;
+    }
+
+    private static boolean isConnectedAfterContingencySide2(Map<LfBranch, DisabledBranchStatus> branchesToOpen, LfBranch branch) {
+        DisabledBranchStatus status = branchesToOpen.get(branch);
+        return status == null || status == DisabledBranchStatus.SIDE_1;
+    }
+
+    public Optional<LfContingency> toLfContingency(LfNetwork network) {
+        // find branch to open because of direct impact of the contingency (including propagation is activated)
+        Map<LfBranch, DisabledBranchStatus> branchesToOpen = findBranchToOpenDirectlyImpactedByContingency(network);
+
+        // find branches to open and buses to lost not directly from the contingency impact but as a consequence of
+        // loss of connectivity once contingency applied on the network
+        ContingencyConnectivityLossImpact connectivityLossImpact = findBusesAndBranchesImpactedBecauseOfConnectivityLoss(network, branchesToOpen);
+        if (!connectivityLossImpact.ok) {
             return Optional.empty();
         }
+        Set<LfBus> busesToLost = connectivityLossImpact.busesToLost(); // nothing else
 
-        // add to contingency description buses and branches that won't be part of the main connected
-        // component in post contingency state
-        int createdSynchronousComponents = connectivity.getNbConnectedComponents() - 1;
-        Set<LfBus> buses = connectivity.getVerticesRemovedFromMainComponent();
-        Set<LfBranch> branches = new HashSet<>(connectivity.getEdgesRemovedFromMainComponent());
-
-        // we should manage branches open at one side
-        branchesToOpen.stream()
-                .filter(b -> !b.isConnectedAtBothSides())
-                .forEach(branches::add);
-        for (LfBus bus : buses) {
-            bus.getBranches().stream().filter(b -> !b.isConnectedAtBothSides()).forEach(branches::add);
+        for (LfBus busToLost : busesToLost) {
+            busToLost.getBranches()
+                    .forEach(branch -> {
+                        // fully disable if branch is connected to 2 buses to lost or open on the other side
+                        LfBus otherSideBus;
+                        boolean otherSideConnected;
+                        if (branch.getBus1() == busToLost) {
+                            otherSideBus = branch.getBus2();
+                            otherSideConnected = branch.isConnectedSide2() && isConnectedAfterContingencySide2(branchesToOpen, branch);
+                        } else {
+                            otherSideBus = branch.getBus1();
+                            otherSideConnected = branch.isConnectedSide1() && isConnectedAfterContingencySide1(branchesToOpen, branch);
+                        }
+                        if (busesToLost.contains(otherSideBus) || !otherSideConnected) {
+                            addBranchToOpen(branch, DisabledBranchStatus.BOTH_SIDES, branchesToOpen);
+                        }
+                    });
         }
 
-        for (LfHvdc hvdcLine : network.getHvdcs()) {
-            // FIXME
-            // if we loose a bus with a converter station, the other converter station should be considered to if in the
-            // same synchronous component (hvdc setpoint mode).
-            if (buses.contains(hvdcLine.getBus1()) || buses.contains(hvdcLine.getBus2())) {
-                hvdcIdsToOpen.add(hvdcLine.getId());
-            }
-        }
-
-        // reset connectivity to discard triggered branches
-        connectivity.undoTemporaryChanges();
-
-        Map<LfShunt, AdmittanceShift> shunts = new HashMap<>(1);
+        Map<LfShunt, AdmittanceShift> shunts = new LinkedHashMap<>(1);
         for (var e : shuntIdsToShift.entrySet()) {
             LfShunt shunt = network.getShuntById(e.getKey());
             if (shunt != null) { // could be in another component
@@ -343,7 +483,7 @@ public class PropagatedContingency {
             }
         }
 
-        Set<LfGenerator> generators = new HashSet<>(1);
+        Set<LfGenerator> generators = new LinkedHashSet<>(1);
         for (String generatorId : generatorIdsToLose) {
             LfGenerator generator = network.getGeneratorById(generatorId);
             if (generator != null) { // could be in another component
@@ -351,32 +491,43 @@ public class PropagatedContingency {
             }
         }
 
-        Map<LfBus, PowerShift> busesLoadShift = new HashMap<>(1);
-        for (var e : busIdsToShift.entrySet()) {
-            String busId = e.getKey();
-            PowerShift shift = e.getValue();
-            LfBus bus = network.getBusById(busId);
-            if (bus != null) { // could be in another component
-                busesLoadShift.put(bus, shift);
+        Map<LfLoad, LfLostLoad> loads = new LinkedHashMap<>(1);
+        for (var e : loadIdsToLoose.entrySet()) {
+            String loadId = e.getKey();
+            PowerShift powerShift = e.getValue();
+            LfLoad load = network.getLoadById(loadId);
+            if (load != null) { // could be in another component
+                LfLostLoad lostLoad = loads.computeIfAbsent(load, k -> new LfLostLoad());
+                lostLoad.getPowerShift().add(powerShift);
+                lostLoad.getOriginalIds().add(loadId);
             }
         }
 
         // find hvdc lines that are part of this network
-        Set<LfHvdc> hvdcs = hvdcIdsToOpen.stream()
+        Set<LfHvdc> lostHvdcs = hvdcIdsToOpen.stream()
                 .map(network::getHvdcById)
                 .filter(Objects::nonNull) // could be in another component
-                .collect(Collectors.toSet());
+                .collect(Collectors.toCollection(LinkedHashSet::new));
 
-        if (branches.isEmpty()
-                && buses.isEmpty()
+        for (LfHvdc hvdcLine : network.getHvdcs()) {
+            // FIXME
+            // if we loose a bus with a converter station, the other converter station should be considered to if in the
+            // same synchronous component (hvdc setpoint mode).
+            if (busesToLost.contains(hvdcLine.getBus1()) || busesToLost.contains(hvdcLine.getBus2())) {
+                lostHvdcs.add(hvdcLine);
+            }
+        }
+
+        if (branchesToOpen.isEmpty()
+                && busesToLost.isEmpty()
                 && shunts.isEmpty()
-                && busesLoadShift.isEmpty()
+                && loads.isEmpty()
                 && generators.isEmpty()
-                && hvdcs.isEmpty()) {
+                && lostHvdcs.isEmpty()) {
             LOGGER.debug("Contingency '{}' has no impact", contingency.getId());
             return Optional.empty();
         }
 
-        return Optional.of(new LfContingency(contingency.getId(), index, createdSynchronousComponents, buses, branches, shunts, busesLoadShift, generators, hvdcs, originalPowerShiftIds));
+        return Optional.of(new LfContingency(contingency.getId(), index, connectivityLossImpact.createdSynchronousComponents, new DisabledNetwork(busesToLost, branchesToOpen, lostHvdcs), shunts, loads, generators));
     }
 }
